Fix bug in CSS project version spacing

--- a/codox/resources/codox/css/default.css
+++ b/codox/resources/codox/css/default.css
@@ -98,6 +98,9 @@ h2 {
 
 #header h1 .project-version {
     font-weight: normal;
+}
+
+.project-version {
     padding-left: 5px;
 }
 
